# subpop-miner

./: .gitignore  README.md  application_flow.py  landing_widget.py  main.py  print_utils.py  pyproject.toml  requirements.txt  vartype_widget.py  worker.py
miner/: frequent_itemsets.py  optimizer.py  preprocess.py  rule.py  utils.py
src/subpop_miner/: cli.py
src/subpop_miner/datasets/: census_dataset.py
src/subpop_miner/gui/view/: main_window.py  worker.py
src/subpop_miner/gui/view/layouts/: file_loader_layout.py
src/subpop_miner/gui/view/styles/: styles.css  stylesheet.py
src/subpop_miner/gui/view/widgets/: console_widget.py  landing_widget.py  mining_settings.py  varpick_widget.py  vartype_widget.py
src/subpop_miner/miner/: frequent_itemsets.py  optimizer.py  preprocess.py  rule.py  subpop_miner.py  utils.py
src/subpop_miner/synthesis/: driver.py  worker.R
src/subpop_miner/utils/: data_utils.py  logger_config.py  memmap_manager.py
styles/: stylesheet.py
utils/: data_context.py  data_utils.py
view/: main_window.py
view/layouts/: file_loader_layout.py
view/styles/: stylesheet.py
view/widgets/: console_widget.py  varpick_widget.py  vartype_widget.py
widgets/: landing_widget.py  mining_settings.py  varpick_widget.py  vartype_widget.py
